- Thread 관련 테스트 => 임계영역(Critical Section) 관련 테스트중...

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'java-design-pattern'
+rootProject.name = 'java-exercise'
 include 'design-pattern'
 include 'thread'
 include 'generics'
